Apply patch #1654: remove the Stats Uploader from 1.8
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42333 75b3775d-3801-0410-9e12-e2e43121521d

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
@@ -739,10 +739,6 @@
 			</File>
 			<File
 				RelativePath="..\..\src\unit_types.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\upload_log.cpp"
 				>
 			</File>
 			<File
@@ -5666,10 +5662,6 @@
 			</File>
 			<File
 				RelativePath="..\..\src\unit_types.hpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\upload_log.hpp"
 				>
 			</File>
 			<File
